--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/mongoose": "^10.1.0",
     "@nestjs/platform-express": "^10.0.0",
+    "class-transformer": "^0.5.1",
     "dotenv": "^16.4.7",
     "mongoose": "^8.9.1",
     "nodemailer": "^6.9.16",
