--- a/package.json
+++ b/package.json
@@ -28,10 +28,12 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "dotenv": "^16.4.7",
+    "firebase-admin": "^13.0.2",
     "mongoose": "^8.9.1",
     "nodemailer": "^6.9.16",
     "reflect-metadata": "^0.2.0",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "uuid": "^11.0.4"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
